# Mandelbrot

./: CMakeLists.txt  README.md
include/: display.h  renderer.h
src/: display.cpp  main.cpp  renderer.cpp
